--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-recess": "~0.4.0",
-    "grunt-wp-version": "~0.1.0"
+    "grunt-wp-version": "~0.1.0",
+    "grunt-rsync": "~0.2.1"
   }
 }
